# Advanced-CPP-Course-Notes

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Week1 - Value Category.sln  howToBuild.md  topics.txt
Lessons/: CMakeLists.txt  Lesson1.cpp  Lesson10.cpp  Lesson11.cpp  Lesson12.cpp  Lesson13.cpp  Lesson14.cpp  Lesson15.cpp  Lesson16.cpp  Lesson17.cpp  Lesson18.cpp  Lesson19.cpp  Lesson2.cpp  Lesson20.cpp  Lesson21.cpp  Lesson22.cpp  Lesson3.cpp  Lesson4.cpp  Lesson5.cpp  Lesson5_personal_side_project.hpp  Lesson6.cpp  Lesson7.cpp  Lesson8.cpp  Lesson9.cpp  utils.hpp
Week1 - Value Category/: Source.cpp  Source2.cpp  Week1 - Value Category.vcxproj  Week1 - Value Category.vcxproj.filters
